jared first change

--- a/index.html
+++ b/index.html
@@ -136,8 +136,8 @@
                     <div class="col-md-6 col-lg-4 mb-4">
                         <div class="speaker text-left">
                             <a href="speaker-single.html" class="d-block mb-3 thumbnail"><img src="images/person_1.jpg" alt="Image" class="img-fluid"></a>
-                            <h3 class="heading mb-0"><a href="#"><span>Will</span> Peters</a></h3>
-                            <p>Business Consultant in Google</p>
+                            <h3 class="heading mb-0"><a href="#"><span>Jared</span> Wong</a></h3>
+                            <p>MSTC Media and Marketing Officer</p>
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-4 mb-4">
