--- a/index.html
+++ b/index.html
@@ -47,12 +47,12 @@
             "name": "Malaysian Students’ Technology Conference - MSTC",
             "description": "The Malaysian Students’ Technology Conference (MSTC) is a student-led initiative that serves to provide a platform for students to critically discuss and learn more about present-era technological advances and issues regarding STEM topics.",
             "@type": "WebSite",
-            "url": "http://localhost:4000/",
+            "url": "http://mstc19.github.io/",
             "publisher": {
                 "@type": "Organization",
                 "logo": {
                     "@type": "ImageObject",
-                    "url": "http://localhost:4000/css/2016_style/img/icon-large.png"
+                    "url": "http://mstc19.github.io/css/2016_style/img/icon-large.png"
                 }
             },
             "headline": "Malaysian Students’ Technology Conference - MSTC",
