--- a/index.html
+++ b/index.html
@@ -42,17 +42,18 @@
     <meta property="og:site_name" content="Malaysian Students’ Technology Conference - MSTC" />
     <meta property="fb:app_id" content="1616519665327266" />
     <meta name="google-site-verification" content="google3d1dfe2dc5cfa440.html" />
+    <!--
     <script type="application/ld+json">
         {
             "name": "Malaysian Students’ Technology Conference - MSTC",
             "description": "The Malaysian Students’ Technology Conference (MSTC) is a student-led initiative that serves to provide a platform for students to critically discuss and learn more about present-era technological advances and issues regarding STEM topics.",
             "@type": "WebSite",
-            "url": "http://mstc19.github.io/",
+            "url": "http://localhost:4000/",
             "publisher": {
                 "@type": "Organization",
                 "logo": {
                     "@type": "ImageObject",
-                    "url": "http://mstc19.github.io/css/2016_style/img/icon-large.png"
+                    "url": "http://localhost:4000/css/2016_style/img/icon-large.png"
                 }
             },
             "headline": "Malaysian Students’ Technology Conference - MSTC",
@@ -60,19 +61,10 @@
         }
 
     </script>
-    <!-- End Jekyll SEO tag -->
+     End Jekyll SEO tag 
+-->
 
-    <!--Google Analytics SCRIPT-->
-    <script>
-        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-        })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-        ga('create', 'UA-115382289-1', 'auto');
-        ga('send', 'pageview');
-    </script>
-    <!--Google Analytics SCRIPT END-->
-
+    {{% seo %}}
 </head>
 
 <body>
