--- a/index.html
+++ b/index.html
@@ -213,12 +213,12 @@
         </div>
         <div class="row justify-content-center no-gutters">
             <div class="col-md-3 col-sm-6">
-                <a href="#Yeo-Bee-Yin" class="speakers-link" data-toggle="modal">
+                <a class="speakers-link" data-toggle="modal" data-target="#DrJasmine">
                     <div class="speaker_box">
                         <div class="speaker_img">
                             <img src="assets/img/speakers/s1.png" alt="speaker name">
                             <div class="info_box">
-                                <h5 class="name">Speaker 1</h5>
+                                <h5 class="name">Dr. Jasmine Hau Yuan Wen</h5>
                                 <p class="position">CEO Company</p>
                             </div>
                         </div>
@@ -226,82 +226,46 @@
                 </a>
             </div>
             <div class="col-md-3 col-sm-6">
-                <div class="speaker_box">
-                    <div class="speaker_img">
-                        <img src="assets/img/speakers/s2.png" alt="speaker name">
-                        <div class="info_box">
-                            <h5 class="name">Speaker 2</h5>
-                            <p class="position">CEO Company</p>
+                <a class="speakers-link" data-toggle="modal" data-target="#WyHow">
+                    <div class="speaker_box">
+                        <div class="speaker_img">
+                            <img src="assets/img/speakers/s2.png" alt="speaker name">
+                            <div class="info_box">
+                                <h5 class="name">Wy How</h5>
+                                <p class="position">CEO Company</p>
+                            </div>
                         </div>
                     </div>
-                </div>
+                </a>
 
             </div>
             <div class="col-md-3 col-sm-6">
-                <div class="speaker_box">
-                    <div class="speaker_img">
-                        <img src="assets/img/speakers/s3.png" alt="speaker name">
-                        <div class="info_box">
-                            <h5 class="name">Speaker 3</h5>
-                            <p class="position">CEO Company</p>
+                <a class="speakers-link" data-toggle="modal" data-target="#Pedro">
+                    <div class="speaker_box">
+                        <div class="speaker_img">
+                            <img src="assets/img/speakers/s3.png" alt="speaker name">
+                            <div class="info_box">
+                                <h5 class="name">Pedro Uria Recio</h5>
+                                <p class="position">CEO Company</p>
+                            </div>
                         </div>
                     </div>
-                </div>
+                </a>
             </div>
+
             <div class="col-md-3 col-sm-6">
-                <div class="speaker_box">
-                    <div class="speaker_img">
-                        <img src="assets/img/speakers/s4.png" alt="speaker name">
-                        <div class="info_box">
-                            <h5 class="name">Speaker 4</h5>
-                            <p class="position">CEO Company</p>
+                <a class="speakers-link" data-toggle="modal" data-target="#FongTuan">
+                    <div class="speaker_box">
+                        <div class="speaker_img">
+                            <img src="assets/img/speakers/s4.png" alt="speaker name">
+                            <div class="info_box">
+                                <h5 class="name">Fong Tuan</h5>
+                                <p class="position">CEO Company</p>
+                            </div>
                         </div>
                     </div>
-                </div>
-            </div>
-            <div class="col-md-3 col-sm-6">
-                <div class="speaker_box">
-                    <div class="speaker_img">
-                        <img src="assets/img/speakers/s5.png" alt="speaker name">
-                        <div class="info_box">
-                            <h5 class="name">Speaker 5</h5>
-                            <p class="position">CEO Company</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-3 col-sm-6">
-                <div class="speaker_box">
-                    <div class="speaker_img">
-                        <img src="assets/img/speakers/s6.png" alt="speaker name">
-                        <div class="info_box">
-                            <h5 class="name">Speaker 6</h5>
-                            <p class="position">CEO Company</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-3 col-sm-6">
-                <div class="speaker_box">
-                    <div class="speaker_img">
-                        <img src="assets/img/speakers/s7.png" alt="speaker name">
-                        <div class="info_box">
-                            <h5 class="name">Speaker 7</h5>
-                            <p class="position">CEO Company</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-3 col-sm-6">
-                <div class="speaker_box">
-                    <div class="speaker_img">
-                        <img src="assets/img/speakers/s8.png" alt="speaker name">
-                        <div class="info_box">
-                            <h5 class="name">Speaker 8</h5>
-                            <p class="position">CEO Company</p>
-                        </div>
-                    </div>
-                </div>
+                </a>
+
             </div>
 
 
@@ -521,6 +485,127 @@
             </div>
         </div>
     </footer>
+
+
+    <!--pop up start-->
+
+
+    <div class="portfolio-modal modal fade" id="DrJasmine" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-dialog modal-lg">
+            <div class="modal-content">
+                <div class="close-modal" data-dismiss="modal">
+                    <div class="lr">
+                        <div class="rl">
+                        </div>
+                    </div>
+                </div>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-8 col-lg-offset-2">
+                            <div class="modal-body">
+                                <h2>Dr. Jasmine Hau Yuan Wen</h2>
+                                <hr class="star-primary">
+                                <img src="assets/img/speakers/s1.png" class="img-responsive img-centered" alt="Picture of Yeo Bee Yin">
+                                <h3>Topic: Keynote</h3>
+                                <p>YB Yeo Bee Yin is the Minister of Energy, Technology, Science, Climate Change and Environment cum the Member of Parliament for Bakri, Johor. She is also the National Assistant Publicity Secretary of the Democratic Action Party (DAP) and Vice Chairwoman of Pakatan Harapan Youth.She is an engineer by training. She graduated from University Technology Petronas with a first-class honours degree in Bachelor of Chemical Engineering and University of Cambridge, UK with Commendation in MPhil. in Advanced Chemical Engineering. She was also a recipient of the prestigious Gates Cambridge Scholarship for her postgraduate studies.At the age of 29, Bee Yin contested for the first time in Malaysia's 13th General Election (GE13) and was elected as the State Assemblywoman for Damansara Utama on 5th May 2013, making her the youngest member of the Selangor State Legislative Assembly 2013-2018.While,in the 14th General Election (GE14) in 2018, she was sent by the DAP to return to her home state Johor to contest in Bakri parliamentary seat, as Johor was the key battleground for Pakatan Harapan in GE14.</p>
+                                <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+    <div class="portfolio-modal modal fade" id="WyHow" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-dialog modal-lg">
+            <div class="modal-content">
+                <div class="close-modal" data-dismiss="modal">
+                    <div class="lr">
+                        <div class="rl">
+                        </div>
+                    </div>
+                </div>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-8 col-lg-offset-2">
+                            <div class="modal-body">
+                                <h2>Wy How</h2>
+                                <hr class="star-primary">
+                                <img src="assets/img/speakers/s1.png" class="img-responsive img-centered" alt="Picture of Yeo Bee Yin">
+                                <h3>Topic: Keynote</h3>
+                                <p>YB Yeo Bee Yin is the Minister of Energy, Technology, Science, Climate Change and Environment cum the Member of Parliament for Bakri, Johor. She is also the National Assistant Publicity Secretary of the Democratic Action Party (DAP) and Vice Chairwoman of Pakatan Harapan Youth.She is an engineer by training. She graduated from University Technology Petronas with a first-class honours degree in Bachelor of Chemical Engineering and University of Cambridge, UK with Commendation in MPhil. in Advanced Chemical Engineering. She was also a recipient of the prestigious Gates Cambridge Scholarship for her postgraduate studies.At the age of 29, Bee Yin contested for the first time in Malaysia's 13th General Election (GE13) and was elected as the State Assemblywoman for Damansara Utama on 5th May 2013, making her the youngest member of the Selangor State Legislative Assembly 2013-2018.While,in the 14th General Election (GE14) in 2018, she was sent by the DAP to return to her home state Johor to contest in Bakri parliamentary seat, as Johor was the key battleground for Pakatan Harapan in GE14.</p>
+                                <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
+    <div class="portfolio-modal modal fade" id="Pedro" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-dialog modal-lg">
+            <div class="modal-content">
+                <div class="close-modal" data-dismiss="modal">
+                    <div class="lr">
+                        <div class="rl">
+                        </div>
+                    </div>
+                </div>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-8 col-lg-offset-2">
+                            <div class="modal-body">
+                                <h2>Pedro Uria Recio</h2>
+                                <hr class="star-primary">
+                                <img src="assets/img/speakers/s1.png" class="img-responsive img-centered" alt="Picture of Yeo Bee Yin">
+                                <h3>Topic: Keynote</h3>
+                                <p>YB Yeo Bee Yin is the Minister of Energy, Technology, Science, Climate Change and Environment cum the Member of Parliament for Bakri, Johor. She is also the National Assistant Publicity Secretary of the Democratic Action Party (DAP) and Vice Chairwoman of Pakatan Harapan Youth.She is an engineer by training. She graduated from University Technology Petronas with a first-class honours degree in Bachelor of Chemical Engineering and University of Cambridge, UK with Commendation in MPhil. in Advanced Chemical Engineering. She was also a recipient of the prestigious Gates Cambridge Scholarship for her postgraduate studies.At the age of 29, Bee Yin contested for the first time in Malaysia's 13th General Election (GE13) and was elected as the State Assemblywoman for Damansara Utama on 5th May 2013, making her the youngest member of the Selangor State Legislative Assembly 2013-2018.While,in the 14th General Election (GE14) in 2018, she was sent by the DAP to return to her home state Johor to contest in Bakri parliamentary seat, as Johor was the key battleground for Pakatan Harapan in GE14.</p>
+                                <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="portfolio-modal modal fade" id="FongTuan" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-dialog modal-lg">
+            <div class="modal-content">
+                <div class="close-modal" data-dismiss="modal">
+                    <div class="lr">
+                        <div class="rl">
+                        </div>
+                    </div>
+                </div>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-8 col-lg-offset-2">
+                            <div class="modal-body">
+                                <h2>Fong Tuan</h2>
+                                <hr class="star-primary">
+                                <img src="assets/img/speakers/s1.png" class="img-responsive img-centered" alt="Picture of Yeo Bee Yin">
+                                <h3>Topic: Keynote</h3>
+                                <p>YB Yeo Bee Yin is the Minister of Energy, Technology, Science, Climate Change and Environment cum the Member of Parliament for Bakri, Johor. She is also the National Assistant Publicity Secretary of the Democratic Action Party (DAP) and Vice Chairwoman of Pakatan Harapan Youth.She is an engineer by training. She graduated from University Technology Petronas with a first-class honours degree in Bachelor of Chemical Engineering and University of Cambridge, UK with Commendation in MPhil. in Advanced Chemical Engineering. She was also a recipient of the prestigious Gates Cambridge Scholarship for her postgraduate studies.At the age of 29, Bee Yin contested for the first time in Malaysia's 13th General Election (GE13) and was elected as the State Assemblywoman for Damansara Utama on 5th May 2013, making her the youngest member of the Selangor State Legislative Assembly 2013-2018.While,in the 14th General Election (GE14) in 2018, she was sent by the DAP to return to her home state Johor to contest in Bakri parliamentary seat, as Johor was the key battleground for Pakatan Harapan in GE14.</p>
+                                <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!--pop up end-->
+
+
+
+
+
     <div class="copyright_footer">
         <div class="container">
             <div class="row justify-content-center">
@@ -540,30 +625,7 @@
     </div>
     <!--footer end -->
 
-    <div class="portfolio-modal modal fade" id="Yeo-Bee-Yin" tabindex="-1" role="dialog" aria-hidden="true">
-        <div class="modal-content">
-            <div class="close-modal" data-dismiss="modal">
-                <div class="lr">
-                    <div class="rl">
-                    </div>
-                </div>
-            </div>
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-8 col-lg-offset-2">
-                        <div class="modal-body">
-                            <h2>YB Yeo Bee Yin</h2>
-                            <hr class="star-primary">
-                            <img src="assets/img/speakers/s1.png" class="img-responsive img-centered" alt="Picture of Yeo Bee Yin">
-                            <h3>Topic: Keynote</h3>
-                            <p>YB Yeo Bee Yin is the Minister of Energy, Technology, Science, Climate Change and Environment cum the Member of Parliament for Bakri, Johor. She is also the National Assistant Publicity Secretary of the Democratic Action Party (DAP) and Vice Chairwoman of Pakatan Harapan Youth.She is an engineer by training. She graduated from University Technology Petronas with a first-class honours degree in Bachelor of Chemical Engineering and University of Cambridge, UK with Commendation in MPhil. in Advanced Chemical Engineering. She was also a recipient of the prestigious Gates Cambridge Scholarship for her postgraduate studies.At the age of 29, Bee Yin contested for the first time in Malaysia's 13th General Election (GE13) and was elected as the State Assemblywoman for Damansara Utama on 5th May 2013, making her the youngest member of the Selangor State Legislative Assembly 2013-2018.While,in the 14th General Election (GE14) in 2018, she was sent by the DAP to return to her home state Johor to contest in Bakri parliamentary seat, as Johor was the key battleground for Pakatan Harapan in GE14.</p>
-                            <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+
 
 
     <!-- jquery -->
