--- a/index.html
+++ b/index.html
@@ -216,10 +216,10 @@
                 <a class="speakers-link" data-toggle="modal" data-target="#DrJasmine">
                     <div class="speaker_box">
                         <div class="speaker_img">
-                            <img src="assets/img/speakers/s1.png" alt="speaker name">
+                            <img src="assets/img/speakers/drjasminehau.jpg" alt="speaker name">
                             <div class="info_box">
                                 <h5 class="name">Dr. Jasmine Hau Yuan Wen</h5>
-                                <p class="position">CEO Company</p>
+                                <p class="position">Invoke - Data Analytics</p>
                             </div>
                         </div>
                     </div>
@@ -229,10 +229,10 @@
                 <a class="speakers-link" data-toggle="modal" data-target="#WyHow">
                     <div class="speaker_box">
                         <div class="speaker_img">
-                            <img src="assets/img/speakers/s2.png" alt="speaker name">
+                            <img src="assets/img/speakers/kohwyhow.jpg" alt="speaker name">
                             <div class="info_box">
                                 <h5 class="name">Wy How</h5>
-                                <p class="position">CEO Company</p>
+                                <p class="position">Invoke - Data Analytics</p>
                             </div>
                         </div>
                     </div>
@@ -243,10 +243,10 @@
                 <a class="speakers-link" data-toggle="modal" data-target="#Pedro">
                     <div class="speaker_box">
                         <div class="speaker_img">
-                            <img src="assets/img/speakers/s3.png" alt="speaker name">
+                            <img src="assets/img/speakers/pedrouriarecio.jpg" alt="speaker name">
                             <div class="info_box">
                                 <h5 class="name">Pedro Uria Recio</h5>
-                                <p class="position">CEO Company</p>
+                                <p class="position">Axiata - Data Analytics</p>
                             </div>
                         </div>
                     </div>
@@ -257,10 +257,10 @@
                 <a class="speakers-link" data-toggle="modal" data-target="#FongTuan">
                     <div class="speaker_box">
                         <div class="speaker_img">
-                            <img src="assets/img/speakers/s4.png" alt="speaker name">
+                            <img src="assets/img/speakers/fongtuanchen.jpg" alt="speaker name">
                             <div class="info_box">
                                 <h5 class="name">Fong Tuan</h5>
-                                <p class="position">CEO Company</p>
+                                <p class="position">Samsung - Head of HR</p>
                             </div>
                         </div>
                     </div>
@@ -505,9 +505,12 @@
                             <div class="modal-body">
                                 <h2>Dr. Jasmine Hau Yuan Wen</h2>
                                 <hr class="star-primary">
-                                <img src="assets/img/speakers/s1.png" class="img-responsive img-centered" alt="Picture of Yeo Bee Yin">
+                                <img src="assets/img/speakers/drjasminehau.jpg" class="img-responsive img-centered" alt="Picture of Yeo Bee Yin">
                                 <h3>Topic: Keynote</h3>
-                                <p>YB Yeo Bee Yin is the Minister of Energy, Technology, Science, Climate Change and Environment cum the Member of Parliament for Bakri, Johor. She is also the National Assistant Publicity Secretary of the Democratic Action Party (DAP) and Vice Chairwoman of Pakatan Harapan Youth.She is an engineer by training. She graduated from University Technology Petronas with a first-class honours degree in Bachelor of Chemical Engineering and University of Cambridge, UK with Commendation in MPhil. in Advanced Chemical Engineering. She was also a recipient of the prestigious Gates Cambridge Scholarship for her postgraduate studies.At the age of 29, Bee Yin contested for the first time in Malaysia's 13th General Election (GE13) and was elected as the State Assemblywoman for Damansara Utama on 5th May 2013, making her the youngest member of the Selangor State Legislative Assembly 2013-2018.While,in the 14th General Election (GE14) in 2018, she was sent by the DAP to return to her home state Johor to contest in Bakri parliamentary seat, as Johor was the key battleground for Pakatan Harapan in GE14.</p>
+                                <p>Dr. Yuan Wen HAU is a research fellow and the head of Cardiac Informatics Cluster
+at IJN-UTM Cardiovascular Engineering Centre, Universiti Teknologi Malaysia. She
+is also a senior lecturer at the Faculty of Biosciences and Medical Engineering,
+Universiti Teknologi Malaysia. She received both Ph.D. degree and master degree in electrical engineering from Universiti Teknologi Malaysia in 2009 and 2005, respectively. Dr. Hau’s research interests are in the design of multi-processor systems-on-chip (MPSoC) /networks-on-chip (NoC), from electronic system level (ESL) modelling to Register Transfer Level (RTL), as well as field programmable gate array (FPGA) implementation. From there her research interests have spread into the field of cryptographic and data security application, biomedical application such as arrhythmia classification and medical imaging processing, as well as ADHD/autism assessment. She has published more than 50 papers in peer-reviewed international journals and conferences, and several book chapters. She also owns a national patent and few copyrights. She is a member of the IEEE.</p>
                                 <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                             </div>
                         </div>
@@ -533,9 +536,13 @@
                             <div class="modal-body">
                                 <h2>Wy How</h2>
                                 <hr class="star-primary">
-                                <img src="assets/img/speakers/s1.png" class="img-responsive img-centered" alt="Picture of Yeo Bee Yin">
+                                <img src="assets/img/speakers/kohwyhow.jpg" class="img-responsive img-centered" alt="Picture of Yeo Bee Yin">
                                 <h3>Topic: Keynote</h3>
-                                <p>YB Yeo Bee Yin is the Minister of Energy, Technology, Science, Climate Change and Environment cum the Member of Parliament for Bakri, Johor. She is also the National Assistant Publicity Secretary of the Democratic Action Party (DAP) and Vice Chairwoman of Pakatan Harapan Youth.She is an engineer by training. She graduated from University Technology Petronas with a first-class honours degree in Bachelor of Chemical Engineering and University of Cambridge, UK with Commendation in MPhil. in Advanced Chemical Engineering. She was also a recipient of the prestigious Gates Cambridge Scholarship for her postgraduate studies.At the age of 29, Bee Yin contested for the first time in Malaysia's 13th General Election (GE13) and was elected as the State Assemblywoman for Damansara Utama on 5th May 2013, making her the youngest member of the Selangor State Legislative Assembly 2013-2018.While,in the 14th General Election (GE14) in 2018, she was sent by the DAP to return to her home state Johor to contest in Bakri parliamentary seat, as Johor was the key battleground for Pakatan Harapan in GE14.</p>
+                                <p>I am a Data Analytics professional with more than 5 years of experience in delivering advanced analytics and business intelligence solutions for airlines, media, property, and FMCG industries. 
+
+My core capability is the ability to leverage data analytics to drive business opportunities in areas of customer relationship management (profitability, retention, upsell/cross sell), digital analytics (online behavioral analytics, DMP), visual analytics and enterprise dashboards.
+
+Lead various advanced analytics projects using data science techniques such as Decision Trees, Random Forest, Hidden Markov Models, Logistic Regression, and Neural Networks.</p>
                                 <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                             </div>
                         </div>
@@ -562,9 +569,13 @@
                             <div class="modal-body">
                                 <h2>Pedro Uria Recio</h2>
                                 <hr class="star-primary">
-                                <img src="assets/img/speakers/s1.png" class="img-responsive img-centered" alt="Picture of Yeo Bee Yin">
+                                <img src="assets/img/speakers/pedrouriarecio.jpg" class="img-responsive img-centered" alt="Picture of Yeo Bee Yin">
                                 <h3>Topic: Keynote</h3>
-                                <p>YB Yeo Bee Yin is the Minister of Energy, Technology, Science, Climate Change and Environment cum the Member of Parliament for Bakri, Johor. She is also the National Assistant Publicity Secretary of the Democratic Action Party (DAP) and Vice Chairwoman of Pakatan Harapan Youth.She is an engineer by training. She graduated from University Technology Petronas with a first-class honours degree in Bachelor of Chemical Engineering and University of Cambridge, UK with Commendation in MPhil. in Advanced Chemical Engineering. She was also a recipient of the prestigious Gates Cambridge Scholarship for her postgraduate studies.At the age of 29, Bee Yin contested for the first time in Malaysia's 13th General Election (GE13) and was elected as the State Assemblywoman for Damansara Utama on 5th May 2013, making her the youngest member of the Selangor State Legislative Assembly 2013-2018.While,in the 14th General Election (GE14) in 2018, she was sent by the DAP to return to her home state Johor to contest in Bakri parliamentary seat, as Johor was the key battleground for Pakatan Harapan in GE14.</p>
+                                <p>I am a senior marketing leader highly experienced in data analytics, AI, product marketing and P&L management. In Axiata, a digital & telecoms conglomerate in Asia, I built from scratch a business transformation team who drove revenue-generating projects across all business units. By expanding this unit to a regional team of 170 analytics and marketing professionals over 11 business units, I eventually became the Group’s head of analytics with a focus on marketing and responsibility on below-the-line marketing. 
+
+Previously at Mckinsey, I was a senior consultant specializing in marketing and strategy in financial services and technology. I have worked for McGraw-Hill in the USA, Veolia Water in China and Orange in France. I have an MBA from Chicago Booth and am currently pursuing a pro-degree in fintech by Barclays. I am also a frequent speaker in international conferences.
+
+I am enthusiastic about coaching and developing people. My career has encompassed building leading high-performing teams, developing marketing strategies, managing transformational programs and owning P&L of products and campaigns. </p>
                                 <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                             </div>
                         </div>
@@ -589,9 +600,15 @@
                             <div class="modal-body">
                                 <h2>Fong Tuan</h2>
                                 <hr class="star-primary">
-                                <img src="assets/img/speakers/s1.png" class="img-responsive img-centered" alt="Picture of Yeo Bee Yin">
+                                <img src="assets/img/speakers/fongtuanchen.jpg" class="img-responsive img-centered" alt="Picture of Yeo Bee Yin">
                                 <h3>Topic: Keynote</h3>
-                                <p>YB Yeo Bee Yin is the Minister of Energy, Technology, Science, Climate Change and Environment cum the Member of Parliament for Bakri, Johor. She is also the National Assistant Publicity Secretary of the Democratic Action Party (DAP) and Vice Chairwoman of Pakatan Harapan Youth.She is an engineer by training. She graduated from University Technology Petronas with a first-class honours degree in Bachelor of Chemical Engineering and University of Cambridge, UK with Commendation in MPhil. in Advanced Chemical Engineering. She was also a recipient of the prestigious Gates Cambridge Scholarship for her postgraduate studies.At the age of 29, Bee Yin contested for the first time in Malaysia's 13th General Election (GE13) and was elected as the State Assemblywoman for Damansara Utama on 5th May 2013, making her the youngest member of the Selangor State Legislative Assembly 2013-2018.While,in the 14th General Election (GE14) in 2018, she was sent by the DAP to return to her home state Johor to contest in Bakri parliamentary seat, as Johor was the key battleground for Pakatan Harapan in GE14.</p>
+                                <p>Growing up in a family of teachers, I learned early on in my career, what motivates me is to nurture, grow and realise people's potential. Though trained as an engineer, my passion is seeing people and organisations succeed. My engineering training and exposure help me see things differently from orthodox HR and this has served me well in my years in the people space. 
+
+My experience lies in successfully directing organizational planning and development through strategic people initiatives and programs, in multiple industries from utility to FMCG, financial services, consulting, medical tech and property/real estate development. Throughout my career journey with large locals, regional outfits and global MNCs, I managed the entire spectrum of HR in a multitude of portfolios from talent management practices to process improvements, talent development to performance management, from organizational design to rewards. My established success in leading and guiding organisations positions me to make significant contribution. 
+
+My expertise in innovating dynamic people programs, initiatives and interventions to optimise employee experience and boost retention and engagement while providing ongoing consultation and feedback as part of the executive team. The stellar outcomes of my directing of effective and efficient people strategies have enabled all my organisations achieve targeted business objectives. All these are made possible by establishing solid and trusting partnerships with stakeholder through exceptional relationship-building skills; utilising positive energy and interpersonal abilities to secure employee and management trust.
+
+Specialties and passion: organisational strategy, behaviour modification, business process transformation, change management, OD, talent identification, assessment and selection, employer branding, succession and retention strategies, leadership development and acceleration, performance management</p>
                                 <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                             </div>
                         </div>
