--- a/index.html
+++ b/index.html
@@ -352,14 +352,14 @@
             </div>
             <div class="brand_carousel owl-carousel">
                 <div class="brand_item text-center">
-                    <img src="assets/img/brands/b1.png" alt="brand">
+                    <img src="assets/img/brands/pwc.png" alt="brand">
                 </div>
                 <div class="brand_item text-center">
-                    <img src="assets/img/brands/b2.png" alt="brand">
+                    <img src="assets/img/brands/kpmg.png" alt="brand">
                 </div>
 
                 <div class="brand_item text-center">
-                    <img src="assets/img/brands/b3.png" alt="brand">
+                    <img src="assets/img/brands/mytukar.png" alt="brand">
                 </div>
                 <div class="brand_item text-center">
                     <img src="assets/img/brands/b4.png" alt="brand">
